<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/connectionFragment">

    <fragment
        android:id="@+id/connectionFragment"
        android:name="com.example.avtodigix.ui.main.ConnectionFragment"
        android:label="@string/nav_connection">
        <action
            android:id="@+id/action_connectionFragment_to_dailyCheckProgressFragment"
            app:destination="@id/dailyCheckProgressFragment" />
    </fragment>

    <fragment
        android:id="@+id/dailyCheckProgressFragment"
        android:name="com.example.avtodigix.ui.dailycheck.DailyCheckProgressFragment"
        android:label="@string/nav_daily_check">
        <action
            android:id="@+id/action_dailyCheckProgressFragment_to_dailyCheckResultFragment"
            app:destination="@id/dailyCheckResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/dailyCheckResultFragment"
        android:name="com.example.avtodigix.ui.dailycheck.DailyCheckResultFragment"
        android:label="@string/nav_daily_check">
        <action
            android:id="@+id/action_dailyCheckResultFragment_to_dailyCheckCardDetailsFragment"
            app:destination="@id/dailyCheckCardDetailsFragment" />
        <action
            android:id="@+id/action_dailyCheckResultFragment_to_dailyCheckHistoryFragment"
            app:destination="@id/dailyCheckHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/dailyCheckCardDetailsFragment"
        android:name="com.example.avtodigix.ui.dailycheck.DailyCheckCardDetailsFragment"
        android:label="@string/nav_daily_check_card_details">
        <argument
            android:name="systemType"
            app:argType="string" />
        <argument
            android:name="status"
            app:argType="string" />
        <argument
            android:name="metrics"
            app:argType="string" />
        <argument
            android:name="baselineComparison"
            app:argType="string" />
        <argument
            android:name="showBaselineComparison"
            app:argType="boolean"
            android:defaultValue="true" />
        <argument
            android:name="recommendation"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/dailyCheckHistoryFragment"
        android:name="com.example.avtodigix.ui.dailycheck.DailyCheckHistoryFragment"
        android:label="@string/daily_check_history_title" />

    <fragment
        android:id="@+id/dataFragment"
        android:name="com.example.avtodigix.ui.main.DataFragment"
        android:label="@string/nav_data" />

    <fragment
        android:id="@+id/issuesHistoryFragment"
        android:name="com.example.avtodigix.ui.main.IssuesHistoryFragment"
        android:label="@string/nav_issues" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.avtodigix.ui.main.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
